# argonautica

./: .gitignore  Cargo.toml
argonautica-c/: Cargo.toml
argonautica-c/src/: hash.rs  utils.rs  verify.rs
argonautica-rs/: Cargo.toml  build.rs
argonautica-rs/src/: lib.rs  utils.rs
argonautica-rs/src/backend/c/: encode.rs
argonautica-rs/src/backend/rust/: decode.rs  encode.rs  mod.rs
argonautica-rs/src/input/: secret_key.rs
argonautica-rs/tests/: tests.rs
